# barcode

./: .gitignore  README.md
server/: Cargo.toml  README.md
server/src/: main.rs
termclient/: Cargo.toml
termclient/src/: main.rs
webclient/: index.html  script.js  style.css
