[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
